<resources>
    <string name="all_images">All pictures</string>
    <string name="all_videos">All videos</string>
    <string name="camera_label">TechnoGallery</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="gallery_picker_label">Gallery</string>
    <string name="gallery_label" />
    <string name="gallery_camera_bucket_name">Camera pictures</string>
    <string name="gallery_camera_videos_bucket_name">Camera videos</string>
    <string name="gallery_camera_media_bucket_name">Camera media</string>
    <string name="switch_to_video_lable">Switch to video</string>
    <string name="switch_to_camera_lable">Switch to camera</string>
    <string name="crop_label">Crop picture</string>
    <string name="view_label">View picture</string>
    <string name="preferences_label">Gallery settings</string>
    <string name="wait">Please wait…</string>
    <string name="no_storage">Please insert an SD card before using the camera.</string>
    <string name="not_enough_space">Your SD card is full.</string>
    <string name="preparing_sd">Preparing SD card…</string>
    <string name="wallpaper">Setting wallpaper, please wait…</string>
    <string name="savingImage">Saving picture…</string>
    <string name="runningFaceDetection">Please wait…</string>
    <string name="settings">Settings</string>
    <string name="view">View</string>
    <string name="details">Details</string>
    <string name="show_on_map">Show on Maps</string>
    <string name="rotate">Rotate</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="slide_show">Slideshow</string>
    <string name="multiselect">Multiselect</string>
    <string name="capture_picture">Capture picture</string>
    <string name="capture_video">Capture video</string>
    <string name="crop_save_text">Save</string>
    <string name="crop_discard_text">Discard</string>
    <string name="confirm_delete_title">Delete</string>
    <string name="confirm_delete_message">The picture will be deleted.</string>
    <string name="confirm_delete_video_message">The video will be deleted.</string>
    <string name="confirm_delete_multiple_message">These media files will be deleted.</string>
    <string name="review_toss">DELETE</string>
    <string name="review_share">SHARE</string>
    <string name="review_set">SET AS</string>
    <string name="review_play">PLAY</string>
    <string name="review_cancel">CANCEL</string>
    <string name="review_done">DONE</string>
    <string name="review_ok">OK</string>
    <string name="review_retake">RETAKE</string>
    <string name="camera_toss">Delete</string>
    <string name="camera_gallery">Gallery</string>
    <string name="camera_share">Share</string>
    <string name="camera_set">Set as</string>
    <string name="camera_play">Play</string>
    <string name="camera_attach">Attach</string>
    <string name="camera_cancel">Cancel</string>
    <string name="camera_crop">Crop</string>
    <string name="no_way_to_share_image">This picture cannot be shared.</string>
    <string name="no_way_to_share_video">This video cannot be shared.</string>
    <string name="video_play">Play</string>
    <string name="camera_gallery_photos_text">Gallery</string>
    <string name="camera_pick_wallpaper">Pictures</string>
    <string name="camera_setas_wallpaper">Wallpaper</string>
    <string name="pref_gallery_category">General settings</string>
    <string name="pref_slideshow_category">Slideshow settings</string>
    <string name="pref_camera_general_settings_category">General settings</string>
    <string name="pref_gallery_size_title">Display size</string>
    <string name="pref_gallery_size_summary">Select the display size of pictures and videos</string>
    <string name="pref_gallery_size_dialogtitle">Picture size</string>
    <string name="default_value_pref_gallery_size">1</string>
    <string name="pref_gallery_sort_title">Sort order</string>
    <string name="pref_gallery_sort_summary">Select the sort order of pictures and videos</string>
    <string name="pref_gallery_sort_dialogtitle">Picture sort</string>
    <string name="default_value_pref_gallery_sort">descending</string>
    <string name="pref_gallery_slideshow_interval_title">Slideshow interval</string>
    <string name="pref_gallery_slideshow_interval_summary">Select how long each slide displays in the show</string>
    <string name="pref_gallery_slideshow_interval_dialogtitle">Slideshow interval</string>
    <string name="default_value_pref_gallery_slideshow_interval">2</string>
    <string name="pref_gallery_slideshow_transition_title">Slideshow transition</string>
    <string name="pref_gallery_slideshow_transition_summary">Select the effect used when moving from one slide to the next</string>
    <string name="pref_gallery_slideshow_transition_dialogtitle">Slideshow transition</string>
    <string name="default_value_pref_gallery_slideshow_transition">0</string>
    <string name="pref_gallery_slideshow_repeat_title">Repeat slideshow</string>
    <string name="pref_gallery_slideshow_repeat_summary">Play slideshow more than once</string>
    <string name="pref_gallery_slideshow_shuffle_title">Shuffle slides</string>
    <string name="pref_gallery_slideshow_shuffle_summary">Show pictures in random order</string>
    <string name="pref_camera_recordlocation_title">Store location in pictures</string>
    <string name="pref_camera_recordlocation_summary">Record location in picture data</string>
    <string name="pref_camera_video_settings_category">Video settings</string>
    <string name="pref_camera_videoquality_default">1</string>
    <string name="pref_camera_videoquality_title">Select video quality</string>
    <string name="pref_camera_videoquality_entry_0">Low (for MMS messages)</string>
    <string name="pref_camera_videoquality_entry_1">High (for SD card)</string>
    <string name="pref_camera_videoquality_dialogtitle">Video quality</string>
    <string name="pref_camera_video_duration_default">1</string>
    <string name="pref_camera_video_duration_title">Select video duration</string>
    <string name="pref_camera_video_duration_entry_1">1 minute (for sharing)</string>
    <string name="pref_camera_video_duration_entry_10">10 minutes</string>
    <string name="pref_camera_video_duration_entry_30">30 minutes</string>
    <string name="pref_camera_video_duration_dialogtitle">Video duration</string>
    <string name="pref_camera_picture_settings_category">Picture settings</string>
    <string name="pref_camera_picturesize_default">2048x1536</string>
    <string name="pref_camera_picturesize_title">Select picture size</string>
    <string name="pref_camera_picturesize_entry_2048x1536">3M (2048x1536)</string>
    <string name="pref_camera_picturesize_entry_1600x1200">2M (1600x1200)</string>
    <string name="pref_camera_picturesize_entry_1024x768">1M (1024x768)</string>
    <string name="pref_camera_picturesize_dialogtitle">Picture size</string>
    <string name="pref_camera_jpegquality_default">85</string>
    <string name="pref_camera_jpegquality_title">Select picture quality</string>
    <string name="pref_camera_jpegquality_entry_superfine">Super fine</string>
    <string name="pref_camera_jpegquality_entry_fine">Fine</string>
    <string name="pref_camera_jpegquality_entry_normal">Normal</string>
    <string name="pref_camera_jpegquality_dialogtitle">Picture quality</string>
    <string name="pref_camera_focusmode_default">auto</string>
    <string name="pref_camera_focusmode_title">Select focus mode</string>
    <string name="pref_camera_focusmode_entry_auto">Auto</string>
    <string name="pref_camera_focusmode_entry_infinity">Infinity</string>
    <string name="pref_camera_focusmode_value_auto">auto</string>
    <string name="pref_camera_focusmode_value_infinity">infinity</string>
    <string name="pref_camera_focusmode_dialogtitle">Focus mode</string>
    <string name="camerasettings">Settings</string>
    <string name="image_gallery_NoImageView_text">No media found.</string>
    <string name="pref_gallery_confirm_delete_title">Confirm deletions</string>
    <string name="pref_gallery_confirm_delete_summary">Show confirmation before deleting a picture or video</string>
    <string name="details_title_text">myvideo</string>
    <string name="details_tags_text">monster</string>
    <string name="details_category_label">Category:</string>
    <string name="details_description_label">Description:</string>
    <string name="details_publicView_text">Public</string>
    <string name="details_tags_label">Tags:</string>
    <string name="details_description_text">testdescription</string>
    <string name="details_title_label">Title:</string>
    <string name="details_save_text">Save</string>
    <string name="details_language_label">Language:</string>
    <string name="details_privateView_text">Private</string>
    <string name="no_location_image">No Location information contained in this image.</string>
    <string name="details_panel_title">Details</string>
    <string name="details_file_size">File size:</string>
    <string name="details_image_resolution">Resolution:</string>
    <string name="details_image_make">Manufacturer:</string>
    <string name="details_image_model">Model:</string>
    <string name="details_image_whitebalance">WhiteBalance:</string>
    <string name="details_image_latitude">GPS Latitude:</string>
    <string name="details_image_longitude">GPS Longitude:</string>
    <string name="details_image_location">Location:</string>
    <string name="details_duration">Duration:</string>
    <string name="details_date_taken">Date taken:</string>
    <string name="details_frame_rate">Frame rate:</string>
    <string name="details_bit_rate">Bit rate:</string>
    <string name="details_codec">Codec:</string>
    <string name="details_format">Format:</string>
    <string name="details_dimension_x">%1$d x %2$d</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="details_fps">%1$d fps</string>
    <string name="details_kbps">%1$d Kbps</string>
    <string name="details_mbps">%1$g Mbps</string>
    <string name="details_ok">OK</string>
    <string name="context_menu_header">Picture options</string>
    <string name="video_context_menu_header">Video options</string>
    <string name="multiface_crop_help">Tap a face to begin.</string>
    <string name="photos_gallery_title">Gallery</string>
    <string name="pick_photos_gallery_title">Select picture</string>
    <string name="videos_gallery_title">Gallery</string>
    <string name="pick_videos_gallery_title">Select video</string>
    <string name="loading_progress_format_string">%d remaining</string>
    <string name="sendImage">Share picture via</string>
    <string name="setImage">Set picture as</string>
    <string name="sendVideo">Share video via</string>
    <string name="movieviewlabel">Movies</string>
    <string name="loading_video">Loading video…</string>
    <string name="spaceIsLow_content">Your SD card is running out of space. Change the quality setting or delete items from Gallery.</string>
    <string name="resume_playing_title">Resume video</string>
    <string name="resume_playing_message">Resume playing from %s ?</string>
    <string name="resume_playing_resume">Resume playing</string>
    <string name="resume_playing_restart">Start over</string>
    <string name="gadget_title">Picture frame</string>
    <string name="video_file_name_format">"'video'-yyyy-MM-dd-HH-mm-ss"</string>
    <string name="file_info_title">File info:</string>
    <string name="video_exceed_mms_limit">The video you recorded is too large to send via MMS. Try recording a shorter length clip.</string>
    <string name="multiselect_share">Share</string>
    <string name="multiselect_delete">Delete</string>
    <string name="multiselect_cancel">Cancel</string>
</resources>