<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_gallery_category">
        <ListPreference
            android:entries="@array/pref_gallery_size_choices"
            android:title="@string/pref_gallery_size_title"
            android:key="pref_gallery_size_key"
            android:summary="@string/pref_gallery_size_summary"
            android:defaultValue="@string/default_value_pref_gallery_size"
            android:dialogTitle="@string/pref_gallery_size_dialogtitle"
            android:entryValues="@array/pref_gallery_size_values" />
        <ListPreference
            android:entries="@array/pref_gallery_sort_choices"
            android:title="@string/pref_gallery_sort_title"
            android:key="pref_gallery_sort_key"
            android:summary="@string/pref_gallery_sort_summary"
            android:defaultValue="@string/default_value_pref_gallery_sort"
            android:dialogTitle="@string/pref_gallery_sort_dialogtitle"
            android:entryValues="@array/pref_gallery_sort_values" />
        <CheckBoxPreference
            android:title="@string/pref_gallery_confirm_delete_title"
            android:key="pref_gallery_confirm_delete_key"
            android:summary="@string/pref_gallery_confirm_delete_summary"
            android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_slideshow_category">
        <ListPreference
            android:entries="@array/pref_gallery_slideshow_interval_choices"
            android:title="@string/pref_gallery_slideshow_interval_title"
            android:key="pref_gallery_slideshow_interval_key"
            android:summary="@string/pref_gallery_slideshow_interval_summary"
            android:defaultValue="@string/default_value_pref_gallery_slideshow_interval"
            android:dialogTitle="@string/pref_gallery_slideshow_interval_dialogtitle"
            android:entryValues="@array/pref_gallery_slideshow_interval_values" />
        <ListPreference
            android:entries="@array/pref_gallery_slideshow_transition_choices"
            android:title="@string/pref_gallery_slideshow_transition_title"
            android:key="pref_gallery_slideshow_transition_key"
            android:summary="@string/pref_gallery_slideshow_transition_summary"
            android:defaultValue="@string/default_value_pref_gallery_slideshow_transition"
            android:dialogTitle="@string/pref_gallery_slideshow_transition_dialogtitle"
            android:entryValues="@array/pref_gallery_slideshow_transition_values" />
        <CheckBoxPreference
            android:title="@string/pref_gallery_slideshow_repeat_title"
            android:key="pref_gallery_slideshow_repeat_key"
            android:summary="@string/pref_gallery_slideshow_repeat_summary"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:title="@string/pref_gallery_slideshow_shuffle_title"
            android:key="pref_gallery_slideshow_shuffle_key"
            android:summary="@string/pref_gallery_slideshow_shuffle_summary"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>