<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_camera_general_settings_category">
        <CheckBoxPreference
            android:title="@string/pref_camera_recordlocation_title"
            android:key="pref_camera_recordlocation_key"
            android:summary="@string/pref_camera_recordlocation_summary"
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_camera_video_settings_category">
        <ListPreference
            android:entries="@array/pref_camera_videoquality_entries"
            android:title="@string/pref_camera_videoquality_title"
            android:key="pref_camera_videoquality_key"
            android:defaultValue="@string/pref_camera_videoquality_default"
            android:dialogTitle="@string/pref_camera_videoquality_dialogtitle"
            android:entryValues="@array/pref_camera_videoquality_entryvalues" />
        <ListPreference
            android:entries="@array/pref_camera_video_duration_entries"
            android:title="@string/pref_camera_video_duration_title"
            android:key="pref_camera_video_duration_key"
            android:defaultValue="@string/pref_camera_video_duration_default"
            android:dialogTitle="@string/pref_camera_video_duration_dialogtitle"
            android:entryValues="@array/pref_camera_video_duration_entryvalues" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_camera_picture_settings_category">
        <ListPreference
            android:title="@string/pref_camera_picturesize_title"
            android:key="pref_camera_picturesize_key"
            android:defaultValue="@string/pref_camera_picturesize_default"
            android:dialogTitle="@string/pref_camera_picturesize_dialogtitle" />
        <ListPreference
            android:entries="@array/pref_camera_jpegquality_entries"
            android:title="@string/pref_camera_jpegquality_title"
            android:key="pref_camera_jpegquality_key"
            android:defaultValue="@string/pref_camera_jpegquality_default"
            android:dialogTitle="@string/pref_camera_jpegquality_dialogtitle"
            android:entryValues="@array/pref_camera_jpegquality_entryvalues" />
        <ListPreference
            android:entries="@array/pref_camera_focusmode_entries"
            android:title="@string/pref_camera_focusmode_title"
            android:key="pref_camera_focusmode_key"
            android:defaultValue="@string/pref_camera_focusmode_default"
            android:dialogTitle="@string/pref_camera_focusmode_dialogtitle"
            android:entryValues="@array/pref_camera_focusmode_entryvalues" />
    </PreferenceCategory>
</PreferenceScreen>