<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:padding="10.0dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="10.0sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_title_label" />
    </LinearLayout>
    <EditText
        android:textSize="10.0sp"
        android:textColor="#ff661700"
        android:id="@id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_title_text"
        android:capitalize="words"
        android:autoText="true" />
    <TextView
        android:textSize="10.0sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_description_label" />
    <EditText
        android:textSize="10.0sp"
        android:textColor="#ff661700"
        android:id="@id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_description_text"
        android:capitalize="sentences"
        android:autoText="true" />
    <TextView
        android:textSize="10.0sp"
        android:id="@id/tags_label"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_tags_label" />
    <EditText
        android:textSize="10.0sp"
        android:textColor="#ff661700"
        android:id="@id/tags"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_tags_text"
        android:capitalize="none"
        android:autoText="false" />
    <LinearLayout
        android:orientation="horizontal"
        android:id="@id/categories"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="10.0sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_category_label" />
        <Spinner
            android:textSize="10.0sp"
            android:id="@id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="false" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@id/languages"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="10.0sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_language_label" />
        <Spinner
            android:textSize="10.0sp"
            android:id="@id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="false" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:orientation="horizontal"
            android:id="@id/publicprivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@id/publicView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/details_publicView_text" />
            <RadioButton
                android:id="@id/privateView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/details_privateView_text" />
        </RadioGroup>
        <Button
            android:id="@id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_save_text"
            android:layout_alignParentRight="true" />
    </LinearLayout>
</LinearLayout>