<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@id/rootLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <AbsoluteLayout
        android:id="@id/slideShowContainer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <com.techno.gallery.ImageViewTouch
            android:id="@id/image1_slideShow"
            android:background="#00000000"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
        <com.techno.gallery.ImageViewTouch
            android:id="@id/image2_slideShow"
            android:background="#00000000"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </AbsoluteLayout>
    <AbsoluteLayout
        android:id="@id/abs"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <com.techno.gallery.ImageViewTouch
            android:id="@id/image"
            android:background="#ff000000"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </AbsoluteLayout>
    <ImageView
        android:id="@id/prev_image"
        android:focusable="true"
        android:visibility="invisible"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:src="@drawable/btn_camera_arrow_left"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true" />
    <ImageView
        android:id="@id/next_image"
        android:focusable="true"
        android:visibility="invisible"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:src="@drawable/btn_camera_arrow_right"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true" />
    <LinearLayout
        android:orientation="horizontal"
        android:id="@id/action_icon_panel"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30.0dip"
        android:layout_marginTop="20.0dip"
        android:layout_marginRight="30.0dip"
        android:layout_alignParentRight="true">
        <com.techno.gallery.ActionMenuButton
            android:id="@id/setas"
            android:visibility="gone"
            android:text="@string/camera_set"
            android:drawableTop="@drawable/ic_menu_set_as"
            style="@style/OnscreenActionIcon" />
        <com.techno.gallery.ActionMenuButton
            android:id="@id/play"
            android:visibility="gone"
            android:text="@string/camera_play"
            android:drawableTop="@drawable/ic_menu_camera_play"
            style="@style/OnscreenActionIcon" />
        <com.techno.gallery.ActionMenuButton
            android:id="@id/share"
            android:visibility="gone"
            android:text="@string/camera_share"
            android:drawableTop="@drawable/ic_menu_share"
            style="@style/OnscreenActionIcon" />
        <com.techno.gallery.ActionMenuButton
            android:id="@id/discard"
            android:visibility="gone"
            android:text="@string/camera_toss"
            android:drawableTop="@drawable/ic_menu_delete"
            style="@style/OnscreenActionIcon" />
        <com.techno.gallery.ActionMenuButton
            android:id="@id/attach"
            android:visibility="gone"
            android:text="@string/camera_attach"
            android:drawableTop="@drawable/ic_menu_attach"
            style="@style/OnscreenActionIcon" />
        <com.techno.gallery.ActionMenuButton
            android:id="@id/cancel"
            android:visibility="gone"
            android:text="@string/camera_cancel"
            android:drawableTop="@drawable/ic_menu_cancel"
            style="@style/OnscreenActionIcon" />
    </LinearLayout>
</RelativeLayout>