<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:gravity="center_horizontal"
    android:id="@id/button_bar"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_marginTop="13.0dip"
    android:layout_marginRight="6.0dip"
    android:layout_marginBottom="10.0dip"
    android:layout_alignParentRight="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:gravity="center|top"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:gravity="center|top"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15.0dip">
            <ImageView
                android:id="@id/btn_delete"
                android:background="@drawable/btn_camera_review"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_ic_review_delete"
                android:scaleType="center" />
            <TextView
                android:textSize="12.0sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review_toss" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center|top"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15.0dip">
            <ImageView
                android:id="@id/btn_share"
                android:background="@drawable/btn_camera_review"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_ic_review_share"
                android:scaleType="center" />
            <TextView
                android:textSize="12.0sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review_share" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center|top"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15.0dip">
            <ImageView
                android:id="@id/btn_play"
                android:background="@drawable/btn_camera_review"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_ic_review_play"
                android:scaleType="center" />
            <TextView
                android:textSize="12.0sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review_play" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center|top"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15.0dip">
            <ImageView
                android:id="@id/btn_set_as"
                android:background="@drawable/btn_camera_review"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_ic_review_set_as"
                android:scaleType="center" />
            <TextView
                android:textSize="12.0sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review_set" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center|top"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@id/btn_done"
                android:background="@drawable/btn_camera_review"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_ic_review_done"
                android:scaleType="center" />
            <TextView
                android:textSize="12.0sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review_done" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>