<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <view
            android:id="@id/grid"
            android:focusable="true"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:listSelector="@drawable/grid_background"
            android:layout_weight="1.0"
            class="com.techno.gallery.GridViewSpecial" />
        <LinearLayout
            android:orientation="horizontal"
            android:id="@id/footer_organize"
            android:background="@android:drawable/bottom_bar"
            android:paddingLeft="4.0dip"
            android:paddingTop="5.0dip"
            android:paddingRight="4.0dip"
            android:paddingBottom="1.0dip"
            android:visibility="gone"
            android:clickable="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0">
            <Button
                android:id="@id/button_delete"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:text="@string/multiselect_delete"
                android:layout_weight="1.0" />
            <Button
                android:id="@id/button_close"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:text="@string/multiselect_cancel"
                android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:orientation="vertical"
        android:id="@id/no_images"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true">
        <ImageView
            android:layout_gravity="center"
            android:id="@id/no_pictures_image"
            android:background="@drawable/ic_gallery_empty2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
        <TextView
            android:textSize="18.0dip"
            android:textColor="#ffbebebe"
            android:layout_gravity="center"
            android:paddingTop="5.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_gallery_NoImageView_text"
            android:layout_below="@id/no_pictures_image"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</RelativeLayout>